add code to import packages

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,11 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'C:/Actuarial - Honours/Dropbox/Honours 2024/codes'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 14\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#-------------------------- import data --------------------------\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# set working directory\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:/Actuarial - Honours/Dropbox/Honours 2024/codes\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m'''we use the popular French Motor TPL insurance claim data '''\u001b[39;00m\n\u001b[1;32m     17\u001b[0m freq \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/freMTPL2freq.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Actuarial - Honours/Dropbox/Honours 2024/codes'"
+     ]
+    }
+   ],
    "source": [
-    "import tensorflow"
+    "############################ 0. PREPARATION ############################\n",
+    "\n",
+    "#-------------------------- import packages --------------------------\n",
+    "import tensorflow as tf\n",
+    "from keras.models import Sequential\n",
+    "from keras.layers import Dense, Input\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import os\n",
+    "\n",
+    "#-------------------------- import data --------------------------\n",
+    "\n",
+    "# set working directory\n",
+    "os.chdir(\"C:/Actuarial - Honours/Dropbox/Honours 2024/codes\")\n",
+    "\n",
+    "'''we use the popular French Motor TPL insurance claim data '''\n",
+    "freq = pd.read_csv(\"data/freMTPL2freq.csv\")\n",
+    "sev = pd.read_csv(\"data/freMTPL2sev.csv\")"
    ]
   }
  ],
