--- a/main.ipynb
+++ b/main.ipynb
@@ -2,40 +2,403 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:/Actuarial - Honours/Dropbox/Honours 2024/codes'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 14\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[1;32m     11\u001b[0m \u001b[38;5;66;03m#-------------------------- import data --------------------------\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \n\u001b[1;32m     13\u001b[0m \u001b[38;5;66;03m# set working directory\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchdir\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mC:/Actuarial - Honours/Dropbox/Honours 2024/codes\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m     16\u001b[0m \u001b[38;5;124;03m'''we use the popular French Motor TPL insurance claim data '''\u001b[39;00m\n\u001b[1;32m     17\u001b[0m freq \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdata/freMTPL2freq.csv\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:/Actuarial - Honours/Dropbox/Honours 2024/codes'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "############################ 0. PREPARATION ############################\n",
     "\n",
     "#-------------------------- import packages --------------------------\n",
+    "import random\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
     "import tensorflow as tf\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Input\n",
-    "import numpy as np\n",
-    "import pandas as pd\n",
-    "import os\n",
+    "from keras.callbacks import EarlyStopping\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler, OrdinalEncoder\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.compose import make_column_transformer\n",
+    "from NAM_models import ActivationLayer, FeatureNN, NAM\n",
     "\n",
     "#-------------------------- import data --------------------------\n",
-    "\n",
-    "# set working directory\n",
-    "os.chdir(\"C:/Actuarial - Honours/Dropbox/Honours 2024/codes\")\n",
-    "\n",
     "'''we use the popular French Motor TPL insurance claim data '''\n",
     "freq = pd.read_csv(\"data/freMTPL2freq.csv\")\n",
     "sev = pd.read_csv(\"data/freMTPL2sev.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "############################ 1. PREPROCESSING ############################\n",
+    "\n",
+    "#-------------------------- merge/filter claim data --------------------------\n",
+    "# complete claim severity data\n",
+    "claimsev = sev.merge(freq, on = 'IDpol', how = 'left')\n",
+    "claimsev = claimsev.drop(columns = ['ClaimNb', 'Exposure'])\n",
+    "\n",
+    "# drop ID\n",
+    "claimfreq = freq.drop(columns = \"IDpol\")\n",
+    "\n",
+    "\n",
+    "#-------------------------- subsample and split --------------------------\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    claimfreq.drop(\"ClaimNb\", axis = 1), claimfreq[\"ClaimNb\"], random_state = 2024)\n",
+    "\n",
+    "\n",
+    "#-------------------------- feature transformation --------------------------\n",
+    "# define transformer\n",
+    "ct = make_column_transformer(\n",
+    "    (\"passthrough\", [\"Exposure\"]),\n",
+    "    (OrdinalEncoder(), [\"Area\", \"VehGas\"]),\n",
+    "    (OneHotEncoder(), [\"VehBrand\", \"Region\"]),\n",
+    "    remainder = StandardScaler(),\n",
+    "    verbose_feature_names_out = False\n",
+    ")\n",
+    "\n",
+    "# fit & transform\n",
+    "train = ct.fit_transform(X_train)\n",
+    "test = ct.transform(X_test)\n",
+    "feature_names = ct.get_feature_names_out()  # get the columns' names\n",
+    "\n",
+    "# transform data back to dataframe\n",
+    "X_train_ct = pd.DataFrame(train.toarray(), columns = feature_names)\n",
+    "X_test_ct = pd.DataFrame(test.toarray(), columns = feature_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IDpol</th>\n",
+       "      <th>ClaimNb</th>\n",
+       "      <th>Exposure</th>\n",
+       "      <th>VehPower</th>\n",
+       "      <th>VehAge</th>\n",
+       "      <th>DrivAge</th>\n",
+       "      <th>BonusMalus</th>\n",
+       "      <th>VehBrand</th>\n",
+       "      <th>VehGas</th>\n",
+       "      <th>Area</th>\n",
+       "      <th>Density</th>\n",
+       "      <th>Region</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.10000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>Rhone-Alpes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.77000</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>55</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1217</td>\n",
+       "      <td>Rhone-Alpes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.75000</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>52</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>B</td>\n",
+       "      <td>54</td>\n",
+       "      <td>Picardie</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.09000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>B</td>\n",
+       "      <td>76</td>\n",
+       "      <td>Aquitaine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.84000</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>46</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>B</td>\n",
+       "      <td>76</td>\n",
+       "      <td>Aquitaine</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678008</th>\n",
+       "      <td>6114326.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00274</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>54</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>E</td>\n",
+       "      <td>3317</td>\n",
+       "      <td>Provence-Alpes-Cotes-D'Azur</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678009</th>\n",
+       "      <td>6114327.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00274</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>41</td>\n",
+       "      <td>95</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>E</td>\n",
+       "      <td>9850</td>\n",
+       "      <td>Ile-de-France</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678010</th>\n",
+       "      <td>6114328.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00274</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2</td>\n",
+       "      <td>45</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>D</td>\n",
+       "      <td>1323</td>\n",
+       "      <td>Rhone-Alpes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678011</th>\n",
+       "      <td>6114329.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00274</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60</td>\n",
+       "      <td>50</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Regular</td>\n",
+       "      <td>B</td>\n",
+       "      <td>95</td>\n",
+       "      <td>Bourgogne</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>678012</th>\n",
+       "      <td>6114330.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.00274</td>\n",
+       "      <td>7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>29</td>\n",
+       "      <td>54</td>\n",
+       "      <td>B12</td>\n",
+       "      <td>Diesel</td>\n",
+       "      <td>B</td>\n",
+       "      <td>65</td>\n",
+       "      <td>Aquitaine</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>678013 rows × 12 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            IDpol  ClaimNb  Exposure  VehPower  VehAge  DrivAge  BonusMalus  \\\n",
+       "0             1.0        1   0.10000         5       0       55          50   \n",
+       "1             3.0        1   0.77000         5       0       55          50   \n",
+       "2             5.0        1   0.75000         6       2       52          50   \n",
+       "3            10.0        1   0.09000         7       0       46          50   \n",
+       "4            11.0        1   0.84000         7       0       46          50   \n",
+       "...           ...      ...       ...       ...     ...      ...         ...   \n",
+       "678008  6114326.0        0   0.00274         4       0       54          50   \n",
+       "678009  6114327.0        0   0.00274         4       0       41          95   \n",
+       "678010  6114328.0        0   0.00274         6       2       45          50   \n",
+       "678011  6114329.0        0   0.00274         4       0       60          50   \n",
+       "678012  6114330.0        0   0.00274         7       6       29          54   \n",
+       "\n",
+       "       VehBrand   VehGas Area  Density                       Region  \n",
+       "0           B12  Regular    D     1217                  Rhone-Alpes  \n",
+       "1           B12  Regular    D     1217                  Rhone-Alpes  \n",
+       "2           B12   Diesel    B       54                     Picardie  \n",
+       "3           B12   Diesel    B       76                    Aquitaine  \n",
+       "4           B12   Diesel    B       76                    Aquitaine  \n",
+       "...         ...      ...  ...      ...                          ...  \n",
+       "678008      B12  Regular    E     3317  Provence-Alpes-Cotes-D'Azur  \n",
+       "678009      B12  Regular    E     9850                Ile-de-France  \n",
+       "678010      B12   Diesel    D     1323                  Rhone-Alpes  \n",
+       "678011      B12  Regular    B       95                    Bourgogne  \n",
+       "678012      B12   Diesel    B       65                    Aquitaine  \n",
+       "\n",
+       "[678013 rows x 12 columns]"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "freq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "12713/12713 [==============================] - 133s 10ms/step - loss: nan - mse: 158590464813957120.0000 - val_loss: nan - val_mse: 943519171499524096.0000\n",
+      "Epoch 2/5\n",
+      "12713/12713 [==============================] - 128s 10ms/step - loss: nan - mse: 10363565594858487808.0000 - val_loss: nan - val_mse: 32478309046131097600.0000\n",
+      "Epoch 3/5\n",
+      "12713/12713 [==============================] - 128s 10ms/step - loss: nan - mse: 121806475380280786944.0000 - val_loss: nan - val_mse: 278710681333124825088.0000\n",
+      "Epoch 4/5\n",
+      "12713/12713 [==============================] - 126s 10ms/step - loss: nan - mse: 693720764695036559360.0000 - val_loss: nan - val_mse: 1325167161117677453312.0000\n",
+      "Epoch 5/5\n",
+      "12713/12713 [==============================] - 127s 10ms/step - loss: nan - mse: 2658149193488749559808.0000 - val_loss: nan - val_mse: 4520756934575894036480.0000\n",
+      "5297/5297 [==============================] - 12s 2ms/step - loss: nan - mse: 4519535051701993078784.0000\n",
+      "Test Loss: nan, Test MSE: 4.519535051701993e+21\n"
+     ]
+    }
+   ],
+   "source": [
+    "############################ 2. NAM ############################\n",
+    "\n",
+    "#-------------------------- fit a NAM model --------------------------\n",
+    "nam_model = NAM(num_inputs = X_train_ct.shape[1], num_units = 20, trainable=True, shallow=False)\n",
+    "nam_model.compile(optimizer='adam', loss = \"poisson\", metrics = ['mse'])\n",
+    "history = nam_model.fit(X_train_ct, y_train, \n",
+    "                        epochs = 5, \n",
+    "                        batch_size = 32, \n",
+    "                        validation_split = 0.2)\n",
+    "\n",
+    "#-------------------------- evaluate on test set --------------------------\n",
+    "test_loss, test_mse = nam_model.evaluate(X_test_ct, y_test)\n",
+    "print(f\"Test Loss: {test_loss}, Test MSE: {test_mse}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5297/5297 [==============================] - 10s 2ms/step\n"
+     ]
+    }
+   ],
+   "source": [
+    "predicted_value = nam_model.predict(X_test_ct)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-6.5929421e+10, -6.3642231e+10, -6.5907614e+10, ...,\n",
+       "       -6.5100317e+10, -6.7328459e+10, -6.4217784e+10], dtype=float32)"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "predicted_value"
    ]
   }
  ],
@@ -55,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
