update package import with GAMINet library

--- a/freMPL1.ipynb
+++ b/freMPL1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
     "from keras.constraints import Constraint\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.initializers import Zeros\n",
-    "from tensorflow.keras.optimizers.legacy import Adam, Nadam # the non-legacy version runs slowly on Mac\n",
+    "from tensorflow.keras.optimizers import Adam, Nadam\n",
     "import keras_tuner as kt\n",
     "from keras.utils import plot_model\n",
     "from tensorflow.keras.losses import Poisson\n",
