--- a/bike.ipynb
+++ b/bike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "4  0.24  0.2879  0.75        0.0  "
       ]
      },
-     "execution_count": 98,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +172,7 @@
     "from keras.constraints import Constraint\n",
     "from keras.callbacks import EarlyStopping\n",
     "from keras.initializers import Zeros\n",
-    "from tensorflow.keras.optimizers.legacy import Adam, Nadam # the non-legacy version runs slowly on Mac\n",
+    "from tensorflow.keras.optimizers import Adam, Nadam\n",
     "import keras_tuner as kt\n",
     "from keras.utils import plot_model\n",
     "from tensorflow.keras.losses import Poisson\n",
@@ -190,6 +190,8 @@
     "from NAM_models import ActivationLayer, FeatureNN, NAM\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
     "from interpret.glassbox import ExplainableBoostingClassifier\n",
+    "import gaminet\n",
+    "from gaminet import GAMINet\n",
     "\n",
     "#-------------------------- import data --------------------------\n",
     "'''Data Source: https://archive.ics.uci.edu/dataset/275/bike+sharing+dataset'''\n",
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +451,7 @@
        "16  count of total rental bikes including both cas...  None             no  "
       ]
      },
-     "execution_count": 99,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
