integrate sparsity with monotonicity + modify synthetic data

--- a/freMPL1.ipynb
+++ b/freMPL1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,11 +187,11 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/30/wpb2n_hs72q5fz9yvp8c1cth0000gv/T/ipykernel_8631/3082177258.py:14: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "/var/folders/30/wpb2n_hs72q5fz9yvp8c1cth0000gv/T/ipykernel_97756/3082177258.py:14: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
       "  claim[\"SocioCateg\"] = claim[\"SocioCateg\"].replace(categories_to_replace, 'Other')\n",
-      "/var/folders/30/wpb2n_hs72q5fz9yvp8c1cth0000gv/T/ipykernel_8631/3082177258.py:20: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "/var/folders/30/wpb2n_hs72q5fz9yvp8c1cth0000gv/T/ipykernel_97756/3082177258.py:20: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
       "  claim[\"VehPrice\"] = claim[\"VehPrice\"].replace(['X', 'Y', 'Z'], 'W')\n",
-      "/var/folders/30/wpb2n_hs72q5fz9yvp8c1cth0000gv/T/ipykernel_8631/3082177258.py:21: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
+      "/var/folders/30/wpb2n_hs72q5fz9yvp8c1cth0000gv/T/ipykernel_97756/3082177258.py:21: FutureWarning: The behavior of Series.replace (and DataFrame.replace) with CategoricalDtype is deprecated. In a future version, replace will only be used for cases that preserve the categories. To change the categories, use ser.cat.rename_categories instead.\n",
       "  claim[\"VehPrice\"] = claim[\"VehPrice\"].replace(['A', 'B'], 'AB')\n"
      ]
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +463,7 @@
        "4          6.0       M1  2020.635952       18            None  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -485,6 +485,28 @@
     "\n",
     "# check\n",
     "claim.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.587014086879048\n",
+      "2224.222377662966\n",
+      "40392.31195087225\n"
+     ]
+    }
+   ],
+   "source": [
+    "# -------------------------- check to support the generation of synthetic data --------------------------\n",
+    "print(claim[\"ClaimAmount\"].min())\n",
+    "print(claim[\"ClaimAmount\"].mean())\n",
+    "print(claim[\"ClaimAmount\"].max())"
    ]
   },
   {
